--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,22 @@
             </plugins>
         </build>
     </profile>
+        <profile>
+            <id>ui-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version>
+                        <configuration>
+                        <includes>
+                            <include>**/UiTestRunner.java</include>
+                        </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
